| Summary: | ASTERISK-25196: res_pjsip_nat: rewrite_contact should not be applied to Contact header when Record-Route headers are present | ||
| Reporter: | Mark Michelson (mmichelson) | Labels: | |
| Date Opened: | 2015-06-24 17:02:04 | Date Closed: | 2015-06-26 11:01:16 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_nat |
| Versions: | SVN 13.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | (This issue is mainly a placeholder for https://gerrit.asterisk.org/#/c/711)
The issue was discovered at Digium when performing provider testing. The observed issue was that Asterisk sent an INVITE to sip:foo. The 200 OK that Asterisk received had a Contact header of sip:bar, and Record-Route headers of sip:baz and sip:foo in that order. The result was that Asterisk rewrote the Contact header from sip:bar to sip:foo. The resulting ACK that Asterisk sent had R-URI of sip:foo, and Route headers sip:foo and sip:baz in that order. The problem is that the ACK never reached sip:bar since that was completely removed from the route set. | ||
| Comments: | |||